Added height conversion from cm to inch, updated no data available message when no species are available

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     // Gson dependency
     implementation "com.google.code.gson:gson:$rootProject.gson_version"
 
+    implementation 'com.google.android.material:material:1.2.1'
+
     //Architecture components
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycle_version"
